--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "travelogue",
+  "name": "travelogue-hapi4",
   "description": "hapi passport.js integration helper",
   "version": "2.0.0",
   "author": "Van Nguyen <thegoleffect@gmail.com>",
